Added link to Github repo (the home button)

--- a/Week7/index.html
+++ b/Week7/index.html
@@ -34,7 +34,7 @@
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+				<a class="navbar-brand" href="https://github.com/eltiffster/ENGL508Notebook/tree/master/Week7" target="_blank"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 			</div>
 		<p class="navbar-text">"You Can't Win an Argument," from <em>How to Win Friends and Influence People</em> by Dale Carnegie</p>
 		</div>
