Update style.css and form.html

--- a/Week9/form.html
+++ b/Week9/form.html
@@ -6,7 +6,7 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	  <title>You Can't Win an Argument</title>
+	  <title>___Who Can Do This</title>
 	  <meta name="DC.Title" content="508 Week 9: Make it a Form">
 	  <meta name="DC.Creator" content="Tiffany Chan">
 	  <meta name="DC.Subject" content="508 Week 9: Make it a Form">
@@ -42,10 +42,14 @@
 					    <label class="sr-only" for="Pronoun1">Preferred pronoun 1</label>
 					    <input type="text" class="form-control" id="Pronoun1" placeholder="Preferred Pronoun">
 					  </div>
-					  Who Can Do This Has the Whole World with Him.
+					  Who Can Do This Has the Whole World with
 					  <div class="form-group">
 					    <label class="sr-only" for="Pronoun2">Preferred pronoun 2</label>
 					    <input type="text" class="form-control" id="Pronoun2" placeholder="Preferred Pronoun">
+					  </div>.
+					  <div class="form-group">
+					    <label class="sr-only" for="Pronoun3">Preferred pronoun 3</label>
+					    <input type="text" class="form-control" id="Pronoun3" placeholder="Preferred Pronoun">
 					  </div>
 					  Who Cannot Walks A Lonely Way."
 					  </h1>
@@ -79,7 +83,7 @@
 			  </div>
 			  <div class="checkbox">
 			    <label>
-			      <input type="checkbox"> human beings with rich inner lives, complex desires and needs
+			      <input type="checkbox"> human adults with rich inner lives and complex desires and needs
 			    </label>
 			  </div>
 
@@ -95,7 +99,7 @@
 			  </p>
 
 			  <p>
-			  	An example? Look at the emails that land in your inbox tomorrow morning, and you will find that most of them violate this important canon of common sense. Take this one:
+			  	An example? Look at the emails that land in your inbox tomorrow morning, and you will find that most of them violate this important canon of common sense. Take this one, for example:
 			  </p>
 
 			<div class="DearCarnegie">
@@ -103,7 +107,7 @@
 			 <form class="form-inline">Dear
 				 <div class="form-group">
 				   <label class="sr-only" for="NameForDale">Name for Dale Carnegie</label>
-				   <input type="text" class="form-control" id="NameForDale" placeholder="Mr. Carnegie">
+				   <input type="text" class="form-control" id="NameForDale" placeholder="Name for Carnegie">
 				 </div>:
 			 </form>
 			 <br/>
@@ -120,7 +124,7 @@
 
 			<div class="textarea-group" id="IDesire-group">
 			<label class="control-label" for="IDesire">I desire</label>
-			 <textarea class="form-control" rows="5" id="IDesire">
+			 <textarea class="form-control" rows="10" id="IDesire">
 			 </textarea>
 			</div>	
 
@@ -139,7 +143,7 @@
 			</p>	
 
 			<form id="EmailEnding">
-				   <input type="text" class="form-control" placeholder="Very truly yours,">
+				   <input type="text" class="form-control" placeholder="Sign off,">
 				   <input type="text" class="form-control" placeholder="Name">
 				   <input type="text" class="form-control" placeholder="Title and Company">
 			</form>
@@ -148,7 +152,7 @@
 
 
 			  <div class="form-group" id="UploadSoul">
-			    <label for="exampleInputFile">Upload your soul.</label>
+			    <label for="exampleInputFile">Upload your self.</label>
 			    <input type="file">
 			  </div>
 
