--- a/Week9/form.html
+++ b/Week9/form.html
@@ -156,6 +156,8 @@
 			    <input type="file">
 			  </div>
 
+			  <button>Submit</button>
+
 
 			</div><!-- .col-md-8 .col-md-offset-2 -->
 			</div><!-- row -->
